refactor(route): Chage all edit endpoints to PATCH method
Punish endpoint to PUT method
